--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shaozeming/xunsearch-laravel",
+    "name": "flex/xunsearch-laravel",
     "description": "基于XunSearch（讯搜）sdk的全文搜索Laravel 5.*，支持全拼，拼音简写，模糊,同义词搜索",
     "license": "MIT",
     "authors": [
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.6",
         "illuminate/container": ">=5.1",
-        "shaozeming/xunsearch": "~3.0"
+        "flex/xunsearch": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
